--- a/pythonmodels/templates/pythonmodels/layout/userLayout.html
+++ b/pythonmodels/templates/pythonmodels/layout/userLayout.html
@@ -50,8 +50,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'pythonmodels:model_create' user.username 0 %}">
-                            Create Model <i class="fas fa-chart-bar"></i>
+                        <a class="nav-link" href="{% url 'pythonmodels:dataset_view' user.username 0 %}">
+                            View Datasets <i class="fas fa-chart-bar"></i>
                         </a>
                     </li>
                 </ul>
