--- a/pythonmodels/templates/pythonmodels/user_content/dataUpload.html
+++ b/pythonmodels/templates/pythonmodels/user_content/dataUpload.html
@@ -47,11 +47,13 @@
             </div>
         </div>
 
-        <form id="deleteUpload" method="post">
+        <form class="deleteUpload" method="post">
             {% csrf_token %}
             <button class="btn btn-dark deleteBtn">Delete Dataset
             </button>
         </form>
+
+        {% crispy descripForm %}
 
     </div>
 
