Added create model to view dataset page

--- a/pythonmodels/templates/pythonmodels/layout/userLayout.html
+++ b/pythonmodels/templates/pythonmodels/layout/userLayout.html
@@ -33,11 +33,11 @@
 
     <div class="container-fluid">
         <div class="row content">
-            <div class="col-sm-2 sidenav">
+            <div class="col-md-2 sidenav">
                 {# Fill with create model form #}
             </div>
 
-            <div class="col-sm-8 text-left userBody">
+            <div class="col-md-8 text-left userBody">
                 <ul class="nav nav-tabs userNav">
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'pythonmodels:user_index' user.username %}">
@@ -78,7 +78,7 @@
                 </div>
             </div>
 
-            <div class="col-sm-2 sidenav text-center">
+            <div class="col-md-2 sidenav text-center">
                 {# Add sidenav content #}
             </div>
         </div>
