--- a/pythonmodels/templates/pythonmodels/user_content/datasetInfoTables.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetInfoTables.html
@@ -1,17 +1,17 @@
 <div id="varTables">
 
-    <ul class="nav nav-tabs varNav" id="myTab" role="tablist">
+    <ul class="nav nav-tabs subNav" id="myTab" role="tablist">
         <li class="nav-item">
             <a class="nav-link">Select Type</a>
         </li>
         <li class="nav-item">
             <a class="nav-link active" id="numeric-tab" data-toggle="tab" href="#numTableDiv" role="tab"
-               aria-controls="home"
+               aria-controls="numeric"
                aria-selected="true">Numeric</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" id="other-tab" data-toggle="tab" href="#OtherTableDiv" role="tab"
-               aria-controls="profile"
+               aria-controls="other"
                aria-selected="false">Other</a>
         </li>
     </ul>
