--- a/pythonmodels/templates/pythonmodels/user_content/datasetView.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetView.html
@@ -23,95 +23,46 @@
 
     <div id="datasetBodyDiv">
 
-        <h2>Create a Model</h2>
-
-
-        <form id="modelCreateForm" role="form" method="post">
-            {% csrf_token %}
-            <input id="userName" type="hidden" value="{{ user.username }}">
-
-            <div class="form-group">
-                <label for="dataset">Pick a dataset</label>
-                <select id="dataID" class="form-control" name="dataID">
-                    <optgroup label="{{ user.username }}'s Datasets">
-                        {% if not userDatasets %}
-                            <option disabled>No datasets uploaded</option>
-                        {% else %}
-                            {% for dataset in userDatasets %}
-                                <option value="{{ dataset.id }}">{{ dataset.name }}</option>
-                            {% endfor %}
+        <div class="jumbotron">
+            <div id="dataset_{{ object.id }}" class="datasetDiv">
+                <h1 class="display-5">{{ object.name }}</h1>
+                <br>
+                <div class="lead">
+                    {% if object.user_id is not None and object.description == '' %}
+                        <a href="" class="text-dark addDescrip">
+                            <span class="font-weight-bold">Add Description</span>
+                            <i class="fas fa-pencil-alt"></i>
+                        </a>
+                    {% else %}
+                        {% if object.user_id is None %}
+                            {{ object.description |safe }}
+                        {% elif object.user_id is not None %}
+                            <span class="font-weight-bold datasetDescrip">{{ object.description }}<br></span>
+                            <a href="" class="text-muted addDescrip"><i class="fas fa-pencil-alt"></i></a>
                         {% endif %}
-                    </optgroup>
-                    <optgroup label="Public Datasets">
-                        {% for dataset in publicDatasets %}
-                            <option {% if dataset.id == urlDataset.id %}selected{% endif %} value="{{ dataset.id }}">
-                                {{ dataset.name }}
-                            </option>
-                        {% endfor %}
-                    </optgroup>
-                </select>
-            </div>
+                    {% endif %}
 
-            <div class="form-group">
-                <label for="modelType">What type of model?</label>
-                <select id="modelType" class="form-control" name="modelType">
-                    <optgroup label="Regression">
-                        <option value="Simple Linear Regression">Simple Linear</option>
-                    </optgroup>
-                    <optgroup label="Classification">
-                        <option value="Multinomial Logistic">Multinomial Logistic</option>
-                    </optgroup>
-                </select>
-            </div>
-
-            <div class="form-group">
-                <div class="row">
-
-                    <div class="col-sm-6">
-                        <label for="predictorVars">Select predictor variables</label>
-                        <select multiple id="predictorVars" class="form-control" name="predictorVars[]">
-                            {# Fill with Jquery post request #}
-                        </select>
-                    </div>
-
-                    <div class="col-sm-6">
-                        <label for="responseVar">Select response variable</label>
-                        <select id="responseVar" class="form-control" name="responseVar">
-                            {# Fill with Jquery post request #}
-                        </select>
-                    </div>
-
+                    {% crispy form %}
                 </div>
-            </div>
+                <br>
+                <p>Number of Variables <span class="badge badge-dark">{{ object.vars }}</span></p>
+                <p>Number of Observations <span class="badge badge-dark">{{ object.observations }}</span></p>
 
-            <button id="pyGet" type="submit" class="btn btn-default">
-                Create Model <i id="fa-spinner"></i>
-            </button>
+                <hr class="my-4">
 
-        </form>
+                <p class="lead font-weight-bold">Variable Info</p>
 
-        <hr id="outputDivider" hidden>
+                {% include 'pythonmodels/user_content/datasetInfoTables.html' %}
 
-        {# Python model charts #}
-        <div id="modelOutput">
-            <div class="row">
-                <div id="outputHeader" class=" col-md-12 text-center">
-                    {# Model type header #}
-                </div>
-            </div>
-            <br>
-            <div class="row">
-                <div class="col-md-12">
-                   <table id="summaryStats" class="table">
-                        {# Python model summary stats #}
-                    </table>
-                </div>
-            </div>
-            <div class="row">
-                <div id="residVsFitted" class="col-md-6"></div>
-                <div id="corrMatrix" class="col-md-6"></div>
+                <hr class="my-4">
+
+                <p class="lead font-weight-bold">Model / Visualize Data</p>
+
+                {% include 'pythonmodels/user_content/datasetModelVis.html' %}
+
             </div>
         </div>
+
 
     </div>
 
