Formatted model output table

--- a/pythonmodels/templates/pythonmodels/user_content/datasetModelVis.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetModelVis.html
@@ -71,9 +71,11 @@
                 <br>
                 <div class="row">
                     <div class="col-md-12">
-                        <table id="summaryStats" class="table">
-                            {# Python model summary stats #}
-                        </table>
+                        <div class="table-responsive">
+                            <table id="summaryStats" class="table table-sm">
+                                {# Python model summary stats #}
+                            </table>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
