Added spinner while var info table loads

--- a/pythonmodels/templates/pythonmodels/user_content/datasetView.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetView.html
@@ -50,7 +50,8 @@
 
                 <hr class="my-4">
 
-                <p class="lead font-weight-bold">Variable Info</p>
+                <p class="lead font-weight-bold">Variable Info <i
+                        class="fa fa-spinner fa-pulse fa-fw varTableSpinner"></i></p>
 
                 {% include 'pythonmodels/user_content/datasetInfoTables.html' %}
 
