--- a/pythonmodels/templates/pythonmodels/layout/master.html
+++ b/pythonmodels/templates/pythonmodels/layout/master.html
@@ -49,7 +49,7 @@
 {# Other js #}
 <script src="{% static 'pythonmodels/js/csrfAjax.js' %}"></script>
 {% block js %}{% endblock %}
-<script src="{% static 'pythonmodels/js/landing.js' %}"></script>
+<script src="{% static 'pythonmodels/js/master.js' %}"></script>
 
 </body>
 </html>
