--- a/pythonmodels/templates/pythonmodels/user_content/datasetUpload.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetUpload.html
@@ -27,7 +27,7 @@
 
 {% block userBody %}
 
-    <div id="uploadBodyDiv">
+    <div id="uploadBodyDiv" class="col-md-8 offset-md-2">
 
         <h2>Upload Dataset:</h2>
 
