--- a/pythonmodels/templates/pythonmodels/user_content/datasetView.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetView.html
@@ -25,7 +25,7 @@
 
 {% block userBody %}
 
-    <div id="datasetBodyDiv">
+    <div id="datasetBodyDiv" class="col-md-10 offset-md-1">
 
         <div class="jumbotron">
             <div id="dataset_{{ object.id }}" class="datasetDiv">
