--- a/pythonmodels/static/pythonmodels/css/datasetView.css
+++ b/pythonmodels/static/pythonmodels/css/datasetView.css
@@ -19,6 +19,10 @@
     margin-top: 10px;
 }
 
+#noOutputHeader {
+    margin-top: 150px;
+}
+
 #residVsFitted, #corrMatrix {
     margin-top: 25px;
     margin-bottom: 25px;
