--- a/pythonmodels/templates/pythonmodels/user_content/datasetViewModel.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetViewModel.html
@@ -15,26 +15,26 @@
     <div class="tab-content">
         <div class="tab-pane fade show active" id="modelDiv" role="tabpanel" aria-labelledby="numeric-tab">
 
-            <form id="modelCreateForm" role="form" method="post">
-                {% csrf_token %}
-                <input name="model" value="{{ object.pk }}" hidden>
+            <div class="row">
+                <div class="col-lg-3">
+                    <form id="modelCreateForm" role="form" method="post">
+                        {% csrf_token %}
+                        <input name="model" value="{{ object.pk }}" hidden>
 
-                <div class="form-group">
-                    <label for="modelType">What type of model?</label>
-                    <select id="modelType" class="form-control" name="modelType">
-                        <optgroup label="Regression">
-                            <option value="Simple Linear Regression">Simple Linear</option>
-                        </optgroup>
-                        <optgroup label="Classification">
-                            <option value="Multinomial Logistic">Multinomial Logistic</option>
-                        </optgroup>
-                    </select>
-                </div>
+                        <div class="form-group">
+                            <label for="modelType">What type of model?</label>
+                            <select id="modelType" class="form-control" name="modelType">
+                                <optgroup label="Regression">
+                                    <option value="Simple Linear Regression">Simple Linear</option>
+                                </optgroup>
+                                <optgroup label="Classification">
+                                    <option value="Multinomial Logistic">Multinomial Logistic</option>
+                                </optgroup>
+                            </select>
+                        </div>
 
-                <div class="form-group">
-                    <div class="form-row">
+                        <div class="form-group">
 
-                        <div class="col-md-6">
                             <label for="predictorVars">Select predictor variables</label>
                             <select multiple id="predictorVars" class="form-control" name="predictorVars[]">
                                 {% for var in object.datasetvariable_set.all %}
@@ -43,7 +43,7 @@
                             </select>
                         </div>
 
-                        <div class="col-md-6">
+                        <div class="form-group">
                             <label for="responseVar">Select response variable</label>
                             <select id="responseVar" class="form-control" name="responseVar">
                                 {% for var in object.datasetvariable_set.all %}
@@ -52,35 +52,39 @@
                             </select>
                         </div>
 
-                    </div>
+                        <button id="modelPost" type="submit" class="btn btn-dark">
+                            Create Model <i id="fa-spinner"></i>
+                        </button>
+
+                    </form>
                 </div>
 
-                <button id="modelPost" type="submit" class="btn btn-dark">
-                    Create Model <i id="fa-spinner"></i>
-                </button>
-
-            </form>
-
-            {# Python model charts #}
-            <div id="modelOutput">
-                <div class="row">
-                    <div id="outputHeader" class=" col-md-12 text-center">
-                        {# Model type header #}
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="table-responsive">
-                            <table id="summaryStats" class="table table-sm">
-                                {# Python model summary stats #}
-                            </table>
+                {# Python model charts #}
+                <div class="col-lg-9">
+                    <div id="modelOutput" class="container-fluid">
+                        <div class="row">
+                            <div id="noOutputHeader" class="col-md-12 text-center">
+                                <h3>Click "Create Model" button to show output</h3>
+                            </div>
+                            <div id="outputHeader" class=" col-md-12 text-center">
+                                {# Model type header #}
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="table-responsive">
+                                    <table id="summaryStats" class="table table-sm">
+                                        {# Python model summary stats #}
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div id="residVsFitted" class="col-md-6"></div>
+                            <div id="corrMatrix" class="col-md-6"></div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div id="residVsFitted" class="col-md-6"></div>
-                    <div id="corrMatrix" class="col-md-6"></div>
                 </div>
             </div>
 
