--- a/pythonmodels/templates/pythonmodels/user_content/userIndex.html
+++ b/pythonmodels/templates/pythonmodels/user_content/userIndex.html
@@ -13,7 +13,7 @@
 
 {% block userBody %}
 
-    <div id="welcome" class="col-md-8 offset-md-2">
+    <div id="welcome" class="col-lg-8 offset-lg-2">
 
         <h1>Welcome {{ user.username }}</h1>
 
