--- a/pythonmodels/templates/pythonmodels/registration/register.html
+++ b/pythonmodels/templates/pythonmodels/registration/register.html
@@ -1,8 +1,17 @@
 {% extends 'pythonmodels/layout/master.html' %}
 
+{% load static %}
 {% load crispy_forms_tags %}
 
 {% block title %}PyModel - Register{% endblock %}
+
+{% block css %}
+
+    {# Other user css #}
+    <link rel="stylesheet" href="{% static 'pythonmodels/css/landing.css' %}">
+
+{% endblock %}
+
 
 {% block content %}
 
