Added models and updated metrics

--- a/pythonmodels/static/pythonmodels/css/datasetView.css
+++ b/pythonmodels/static/pythonmodels/css/datasetView.css
@@ -23,7 +23,7 @@
     margin-top: 150px;
 }
 
-#residVsFitted, #corrMatrix {
+#modelPlot, #corrMatrix {
     margin-top: 25px;
     margin-bottom: 25px;
 }
