Added knn model and updated create model form

--- a/pythonmodels/templates/pythonmodels/user_content/datasetViewModel.html
+++ b/pythonmodels/templates/pythonmodels/user_content/datasetViewModel.html
@@ -29,10 +29,12 @@
                                     <option value="rf_regressor">Random Forest</option>
                                 </optgroup>
                                 <optgroup label="Classification">
+                                    <option value="knn">K Nearest Neighbor</option>
                                     <option value="log">Logistic Regression</option>
                                     <option value="rf_classifier">Random Forest</option>
                                 </optgroup>
                             </select>
+                            <p id="modelTypePara">Regression</p>
                         </div>
 
                         <div class="form-group">
